# coppersure

./: .gitignore  CMakeLists.txt  README.md  callgrind.out.29531
include/: component.h  editor.h  gui.h  hashmap.h  level.h  pcb.h  save.h  simulation.h
src/: component.c  editor.c  gui.c  hashmap.c  level.c  main.c  save.c  simulation.c
